# 2021_20405410

./: .gitignore  .gitmodules  README.md  calc.cpp  globals.html  globals_func.html  hello.cpp  hi_and_date.cmd  index.html  last-commit.cmd  maths_8h.html  maths_8h_source.html  sss
.github/workflows/: doxygen-deploy.yml  make-test.yml
Worksheet2/: git-cheat-sheet.txt
Worksheet3/calc_msvc/: adder.h
Worksheet4/calc_cmake/: CMakeLists.txt  adder.h  calc.cpp
Worksheet4/hello_cmake/buildVS/: hello.sln
Worksheet4/hello_cmake/buildVS/hello.dir/Debug/: hello.ilk
Worksheet4/hello_cmake/buildVS/hello.dir/Debug/hello.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Worksheet4/hello_cmake/buildVS/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
Worksheet5/exercise2/: CMakeLists.txt  Untitled.txt  edititemdialog.cpp  edititemdialog.h  edititemdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  stockitem.cpp  stockitem.h  stockitemlistmodel.cpp  stockitemlistmodel.h  test_p.txt
Worksheet5/hello_qt_cm/: CMakeLists.txt  hello_qt.cpp
Worksheet6/: CMakeLists.txt  vtk_cube.cpp
Worksheet6/exercise2/: mainwindow.cpp  mainwindow.ui
Worksheet6/exercise3/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Worksheet7/: CMakeLists.txt  maths.h
Worksheet7/html/: maths_8h_source.html
Worksheet7/latex/: maths_8h_source.tex
Worksheet8/: CMakeLists.txt  adder.cpp  calc.cpp  test1.cpp
calc_msvc/: adder.cpp  adder.lib
calc_msvc/calcd/: adder.exp  adder.lib
search/: all_0.js  functions_0.js
